--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,14 @@
 ---
+
+# Corresponds to MetricsQdrAddresses in THT
+# Addresses configuration (array of hashes).
+qdr_addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
+
+# Corresponds to MetricsQdrAutoLinks in THT
+# AutoLinks for the Configured Addresses
+qdr_autolink_addresses: []
+
+# Where to write the config file
 qdr_conf_output_dir: /var/lib/config-data/ansible-generated/metrics_qdr
 
 # Corresponds to MetricsQdrConnectors in THT
@@ -8,72 +18,26 @@ qdr_connectors: []
 # Set to edge-only or controller-mesh
 qdr_deployment_mode: edge-only
 
-# Corresponds to MetricsQdrUseSSL in THT
-# Set to true if it is required to use SSL or TLS on the connection for listener.
-qdr_listener_require_ssl: no
+qdr_extra_listeners: []
 
-# Corresponds to MetricsQdrTrustedCerts in THT
-# Path to file containing trusted certificates for listener.
-qdr_listener_trusted_certs:
+qdr_extra_ssl_profiles: []
 
-# Corresponds to ServiceNetMap in THT
-# Mapping of service_name -> network name. Typically set via parameter_defaults
-# in the resource registry.  This mapping overrides those in
-# ServiceNetMapDefaults.
-
-# ***** Already exists in group_vars?
-# tripleo_service_net_map: {}
-
-# Corresponds to MonitoringSubscriptionQdr in THT
-# ***** Don't need?
-#monitoring_subscription_qdr: overcloud-qdr
-
-# Corresponds to MetricsQdrPassword in THT
-# Password which should be used to authenticate to the deployed qdrouterd.
-qdr_password: guest
-
-# Corresponds to RoleName in THT
-# Role name on which the service is applied
-# ***** Already exists in inventory_vars?
-#tripleo_role_name:
-
-# Corresponds to DefaultPasswords in THT
-default_passwords: {}
-
-# Corresponds to MetricsQdrAutoLinks in THT
-# AutoLinks for the Configured Addresses
-qdr_autolink_addresses: []
-
-# Corresponds to MetricsQdrExternalEndpoint in THT
-# Whether QDR should listen on external network interface. To enable listening
-# on
-# external network one must deploy QDRs in mesh mode.
-metrics_qdr_external_endpoint: False
-
-# Corresponds to InternalTLSCAFile in THT
-# Specifies the default CA cert to use if TLS is used for services in the
-# internal network.
-tripleo_internal_tlscafile: /etc/ipa/ca.crt
-
-# Corresponds to MetricsQdrAddresses in THT
-# Addresses configuration (array of hashes).
-qdr_addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
-
-# Corresponds to MetricsQdrUsername in THT
-# Username which should be used to authenticate to the deployed qdrouterd.
-qdr_username: guest
+# Corresponds to MetricsQdrAuthenticateClient in THT
+# Authenticate the client using SSL/TLS
+qdr_listener_auth_peer: no
 
 # Corresponds to MetricsQdrPort in THT
 # Service name or port number on which the qdrouterd will accept connections.
 qdr_listener_port: 5666
 
-qdr_log_output: /var/log/qdrouterd/metrics_qdr.log
+# Corresponds to MetricsQdrUseSSL in THT
+# Set to true if it is required to use SSL or TLS on the connection for listener.
+qdr_listener_require_ssl: no
 
-# Corresponds to MetricsQdrSSLProfiles in THT
-# SSL Profiles for the connectors (array of hashes).
-qdr_ssl_profiles: [{'name': 'sslProfile'}]
-qdr_extra_ssl_profiles: []
-qdr_extra_listeners: []
+# Corresponds to MetricsQdrSaslMechanisms in THT
+# List of accepted SASL auth mechanisms for listener in format of comma separated
+# list.
+qdr_listener_sasl_mech: ANONYMOUS
 
 # Corresponds to MetricsQdrSslCertFile in THT
 # Path to SSL certificate file for listener.
@@ -83,33 +47,51 @@ qdr_listener_ssl_cert_file: /etc/pki/tls/certs/metrics_qdr.crt
 # Path to SSL certificate db for listener.
 qdr_listener_ssl_cert_db: /etc/pki/tls/certs/ca-bundle.crt
 
-# Corresponds to MetricsQdrSaslMechanisms in THT
-# List of accepted SASL auth mechanisms for listener in format of comma separated
-# list.
-qdr_listener_sasl_mech: ANONYMOUS
+# Corresponds to MetricsQdrSslKeyFile in THT
+# Path to SSL private key file for listener.
+qdr_listener_ssl_key_file: /etc/pki/tls/certs/metrics_qdr.key
 
 # Corresponds to MetricsQdrSslPassword in THT
 # SSL password to be supplied for listener.
 qdr_listener_ssl_password:
 
-# Corresponds to MetricsQdrSslKeyFile in THT
-# Path to SSL private key file for listener.
-qdr_listener_ssl_key_file: /etc/pki/tls/certs/metrics_qdr.key
-
-# Corresponds to MetricsQdrAuthenticateClient in THT
-# Authenticate the client using SSL/TLS
-qdr_listener_auth_peer: no
-
 # Corresponds to MetricsQdrSslPwFile in THT
 # Path to SSL password file for certificate key for listener.
 qdr_listener_ssl_pw_file:
+
+# Corresponds to MetricsQdrTrustedCerts in THT
+# Path to file containing trusted certificates for listener.
+qdr_listener_trusted_certs:
 
 # Corresponds to MetricsQdrUseEncryption in THT
 # Set to true if it is required to encrypt connection to the peer for listener.
 qdr_listener_use_encryption: no
 
+qdr_log_output: /var/log/qdrouterd/metrics_qdr.log
+
+# Corresponds to MetricsQdrPassword in THT
+# Password which should be used to authenticate to the deployed qdrouterd.
+qdr_password: guest
+
 qdr_router_mode: edge
+
+# Corresponds to MetricsQdrSSLProfiles in THT
+# SSL Profiles for the connectors (array of hashes).
+qdr_ssl_profiles: [{'name': 'sslProfile'}]
+
+# Corresponds to MetricsQdrUsername in THT
+# Username which should be used to authenticate to the deployed qdrouterd.
+qdr_username: guest
+
+# Corresponds to MetricsQdrExternalEndpoint in THT
+# Whether QDR should listen on external network interface. To enable listening
+# on external network one must deploy QDRs in mesh mode.
+metrics_qdr_external_endpoint: False
 
 # Corresponds to EnableInternalTLS in THT
 tripleo_enable_internal_tls: false
 
+# Corresponds to InternalTLSCAFile in THT
+# Specifies the default CA cert to use if TLS is used for services in the
+# internal network.
+tripleo_internal_tlscafile: /etc/ipa/ca.crt
