--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Pre-pull container
         run: |
           sudo docker pull quay.io/tripleomaster/openstack-qdrouterd:current-tripleo
+      - name: Alias the role to match what it will be in tripleo-ansible
+        run: |
+          ln -s "$(basename ${{ github.repository }})" "${{ github.repository }}/../tripleo_qdr"
       - name: "Molecule"
         uses: gofrolist/molecule-action@v2
         with:
@@ -45,4 +48,5 @@ jobs:
       - name: Lint Ansible Playbook
         uses: ansible/ansible-lint-action@master
         with:
-          targets: "."
+          targets: "${{ github.repository }}"
+          args: "-c ${{ github.repository }}/.ansible-lint"
