Lint fixes round 1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
+---
 name: CI
 
-on: push
+on: push  # yamllint disable-line rule:truthy
 
 jobs:
 
@@ -25,10 +26,12 @@ jobs:
           path: "${{ github.repository }}"
       - name: Pre-pull container
         run: |
-          sudo docker pull quay.io/tripleomaster/openstack-qdrouterd:current-tripleo
+          sudo docker pull
+          quay.io/tripleomaster/openstack-qdrouterd:current-tripleo
       - name: Alias the role to match what it will be in tripleo-ansible
         run: |
-          ln -s "$(basename ${{ github.repository }})" "${{ github.repository }}/../tripleo_metrics_qdr"
+          ln -s "$(basename ${{ github.repository }})"
+          "${{ github.repository }}/../tripleo_metrics_qdr"
       - name: "Molecule"
         uses: gofrolist/molecule-action@v2
         with:
