--- a/molecule/controller-mesh-interior-node/verify.yml
+++ b/molecule/controller-mesh-interior-node/verify.yml
@@ -11,22 +11,39 @@
 
   - assert:
       that:
-        - qdrlog_content is search('Configured Listener:.*:5667 proto=any, role=inter-router')
+        - >-
+          qdrlog_content is search('Configured Listener:.*:5667 proto=any,
+          role=inter-router')
       success_msg: Mesh-to-mesh listener configured
 
   - assert:
       that:
-        - qdrlog_content is search('Configured Listener:.*:5668 proto=any, role=edge')
+        - >-
+          qdrlog_content is search('Configured Listener:.*:5668 proto=any,
+          role=edge')
       success_msg: Edge-to-mesh listener configured
 
   - assert:
       that:
-        - qdrlog_content is search('Configured Connector: 10.0.0.20:5667 proto=any, role=edge')
-        - qdrlog_content is search('Configured Connector: 10.0.0.30:5667 proto=any, role=edge')
-        - qdrlog_content is search('Configured Connector: 10.0.0.40:5667 proto=any, role=edge')
+        - >-
+          qdrlog_content is
+          search('Configured Connector: 10.0.0.20:5667 proto=any,
+          role=inter-router')
+        - >-
+          qdrlog_content is
+          search('Configured Connector: 10.0.0.30:5667 proto=any,
+          role=inter-router')
+        - >-
+          qdrlog_content is
+          search('Configured Connector: 10.0.0.40:5667 proto=any,
+          role=inter-router')
       success_msg: Connectors to other mesh nodes configured
 
   - assert:
       that:
-        - qdrlog_content is search('Configured Connector: stf-default-interconnect-5671-service-telemetry.example.com:443 .* role=edge')
+        - >-
+          qdrlog_content is
+          search('Configured Connector:
+          stf-default-interconnect-5671-service-telemetry.example.com:443
+          .* role=edge')
       success_msg: Connector to STF configured
